# pet_project_1

./: .gitignore  .gitkeep  Makefile  README.md  project_structure.drawio
client/src/: myNoiseGeneratorClient.cpp
imageHandler/: CMakeLists.txt  Makefile
imageHandler/src/: myNoiseGeneratorImageHandler.cpp
imageHandler/src/headers/: JPEGimage.hpp  PNGimage.hpp  color.hpp  image.hpp  imageloader.hpp
imageHandler/src/source/: JPEGimage.cpp  PNGimage.cpp  color.cpp
image_ops/: Makefile
image_ops/src/: myNoiseGeneratorImageHandler.cpp
image_ops/src/headers/: color.hpp
image_ops/src/source/: JPEGimage.cpp  imageloader.cpp
server/: CMakeLists.txt  Makefile
server/src/: myNoiseGeneratorServer.cpp
server/src/headers/: BMPimage.hpp  PNGimage.hpp  color.hpp  database.hpp  hash_table.hpp  image.hpp  imageloader.hpp  server.hpp
server/src/source/: BMPimage.cpp  PNGimage.cpp  color.cpp  database.cpp  hash_table.cpp  imageloader.cpp  server.cpp
src/: myNoiseGenerator.cpp
